--- a/src/theme.postcss
+++ b/src/theme.postcss
@@ -1,66 +1,66 @@
 :root {
 	/* =~= Theme Styles =~= */
 	--theme-border-base: 1px;
-	--theme-font-family-heading: system-ui;
+	--theme-font-family-heading: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 	--theme-font-family-base: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 	--theme-font-color-base: var(--color-surface-900);
-	--theme-font-color-dark: var(--color-surface-50);
+	--theme-font-color-dark: var(--color-accent-50);
 	--theme-rounded-base: 4px;
 	--theme-rounded-container: 4px;
 	/* =~= Theme Colors | Tailwind =~= */
-	/* cyan | #06b6d4 */
-	--color-primary-50: 236 254 255; /* ⬅ #ecfeff */
-	--color-primary-100: 207 250 254; /* ⬅ #cffafe */
-	--color-primary-200: 165 243 252; /* ⬅ #a5f3fc */
-	--color-primary-300: 103 232 249; /* ⬅ #67e8f9 */
-	--color-primary-400: 34 211 238; /* ⬅ #22d3ee */
-	--color-primary-500: 6 182 212; /* ⬅ #06b6d4 */
-	--color-primary-600: 8 145 178; /* ⬅ #0891b2 */
-	--color-primary-700: 14 116 144; /* ⬅ #0e7490 */
-	--color-primary-800: 21 94 117; /* ⬅ #155e75 */
-	--color-primary-900: 22 78 99; /* ⬅ #164e63 */
-	/* green | #22c55e */
-	--color-accent-50: 240 253 244; /* ⬅ #f0fdf4 */
-	--color-accent-100: 220 252 231; /* ⬅ #dcfce7 */
-	--color-accent-200: 187 247 208; /* ⬅ #bbf7d0 */
-	--color-accent-300: 134 239 172; /* ⬅ #86efac */
-	--color-accent-400: 74 222 128; /* ⬅ #4ade80 */
-	--color-accent-500: 34 197 94; /* ⬅ #22c55e */
-	--color-accent-600: 22 163 74; /* ⬅ #16a34a */
-	--color-accent-700: 21 128 61; /* ⬅ #15803d */
-	--color-accent-800: 22 101 52; /* ⬅ #166534 */
-	--color-accent-900: 20 83 45; /* ⬅ #14532d */
+	/* neutral | #737373 */
+	--color-primary-50: 250 250 250; /* ⬅ #fafafa */
+	--color-primary-100: 245 245 245; /* ⬅ #f5f5f5 */
+	--color-primary-200: 229 229 229; /* ⬅ #e5e5e5 */
+	--color-primary-300: 212 212 212; /* ⬅ #d4d4d4 */
+	--color-primary-400: 163 163 163; /* ⬅ #a3a3a3 */
+	--color-primary-500: 115 115 115; /* ⬅ #737373 */
+	--color-primary-600: 82 82 82; /* ⬅ #525252 */
+	--color-primary-700: 64 64 64; /* ⬅ #404040 */
+	--color-primary-800: 38 38 38; /* ⬅ #262626 */
+	--color-primary-900: 23 23 23; /* ⬅ #171717 */
+	/* amber | #f59e0b */
+	--color-accent-50: 255 251 235; /* ⬅ #fffbeb */
+	--color-accent-100: 254 243 199; /* ⬅ #fef3c7 */
+	--color-accent-200: 253 230 138; /* ⬅ #fde68a */
+	--color-accent-300: 252 211 77; /* ⬅ #fcd34d */
+	--color-accent-400: 251 191 36; /* ⬅ #fbbf24 */
+	--color-accent-500: 245 158 11; /* ⬅ #f59e0b */
+	--color-accent-600: 217 119 6; /* ⬅ #d97706 */
+	--color-accent-700: 180 83 9; /* ⬅ #b45309 */
+	--color-accent-800: 146 64 14; /* ⬅ #92400e */
+	--color-accent-900: 120 53 15; /* ⬅ #78350f */
+	/* amber | #f59e0b */
+	--color-tertiary-50: 255 251 235; /* ⬅ #fffbeb */
+	--color-tertiary-100: 254 243 199; /* ⬅ #fef3c7 */
+	--color-tertiary-200: 253 230 138; /* ⬅ #fde68a */
+	--color-tertiary-300: 252 211 77; /* ⬅ #fcd34d */
+	--color-tertiary-400: 251 191 36; /* ⬅ #fbbf24 */
+	--color-tertiary-500: 245 158 11; /* ⬅ #f59e0b */
+	--color-tertiary-600: 217 119 6; /* ⬅ #d97706 */
+	--color-tertiary-700: 180 83 9; /* ⬅ #b45309 */
+	--color-tertiary-800: 146 64 14; /* ⬅ #92400e */
+	--color-tertiary-900: 120 53 15; /* ⬅ #78350f */
 	/* yellow | #eab308 */
-	--color-tertiary-50: 254 252 232; /* ⬅ #fefce8 */
-	--color-tertiary-100: 254 249 195; /* ⬅ #fef9c3 */
-	--color-tertiary-200: 254 240 138; /* ⬅ #fef08a */
-	--color-tertiary-300: 253 224 71; /* ⬅ #fde047 */
-	--color-tertiary-400: 250 204 21; /* ⬅ #facc15 */
-	--color-tertiary-500: 234 179 8; /* ⬅ #eab308 */
-	--color-tertiary-600: 202 138 4; /* ⬅ #ca8a04 */
-	--color-tertiary-700: 161 98 7; /* ⬅ #a16207 */
-	--color-tertiary-800: 133 77 14; /* ⬅ #854d0e */
-	--color-tertiary-900: 113 63 18; /* ⬅ #713f12 */
-	/* red | #ef4444 */
-	--color-warning-50: 254 242 242; /* ⬅ #fef2f2 */
-	--color-warning-100: 254 226 226; /* ⬅ #fee2e2 */
-	--color-warning-200: 254 202 202; /* ⬅ #fecaca */
-	--color-warning-300: 252 165 165; /* ⬅ #fca5a5 */
-	--color-warning-400: 248 113 113; /* ⬅ #f87171 */
-	--color-warning-500: 239 68 68; /* ⬅ #ef4444 */
-	--color-warning-600: 220 38 38; /* ⬅ #dc2626 */
-	--color-warning-700: 185 28 28; /* ⬅ #b91c1c */
-	--color-warning-800: 153 27 27; /* ⬅ #991b1b */
-	--color-warning-900: 127 29 29; /* ⬅ #7f1d1d */
-	/* teal | #14b8a6 */
-	--color-surface-50: 240 253 250; /* ⬅ #f0fdfa */
-	--color-surface-100: 204 251 241; /* ⬅ #ccfbf1 */
-	--color-surface-200: 153 246 228; /* ⬅ #99f6e4 */
-	--color-surface-300: 94 234 212; /* ⬅ #5eead4 */
-	--color-surface-400: 45 212 191; /* ⬅ #2dd4bf */
-	--color-surface-500: 20 184 166; /* ⬅ #14b8a6 */
-	--color-surface-600: 13 148 136; /* ⬅ #0d9488 */
-	--color-surface-700: 15 118 110; /* ⬅ #0f766e */
-	--color-surface-800: 17 94 89; /* ⬅ #115e59 */
-	--color-surface-900: 19 78 74; /* ⬅ #134e4a */
+	--color-warning-50: 254 252 232; /* ⬅ #fefce8 */
+	--color-warning-100: 254 249 195; /* ⬅ #fef9c3 */
+	--color-warning-200: 254 240 138; /* ⬅ #fef08a */
+	--color-warning-300: 253 224 71; /* ⬅ #fde047 */
+	--color-warning-400: 250 204 21; /* ⬅ #facc15 */
+	--color-warning-500: 234 179 8; /* ⬅ #eab308 */
+	--color-warning-600: 202 138 4; /* ⬅ #ca8a04 */
+	--color-warning-700: 161 98 7; /* ⬅ #a16207 */
+	--color-warning-800: 133 77 14; /* ⬅ #854d0e */
+	--color-warning-900: 113 63 18; /* ⬅ #713f12 */
+	/* stone | #78716c */
+	--color-surface-50: 250 250 249; /* ⬅ #fafaf9 */
+	--color-surface-100: 245 245 244; /* ⬅ #f5f5f4 */
+	--color-surface-200: 231 229 228; /* ⬅ #e7e5e4 */
+	--color-surface-300: 214 211 209; /* ⬅ #d6d3d1 */
+	--color-surface-400: 168 162 158; /* ⬅ #a8a29e */
+	--color-surface-500: 120 113 108; /* ⬅ #78716c */
+	--color-surface-600: 87 83 78; /* ⬅ #57534e */
+	--color-surface-700: 68 64 60; /* ⬅ #44403c */
+	--color-surface-800: 41 37 36; /* ⬅ #292524 */
+	--color-surface-900: 28 25 23; /* ⬅ #1c1917 */
 }
